<resources>
    <string name="app_name">MarvindCommunity</string>
    <string name="image">image</string>
    <string name="sign_out">Sign Out</string>
    <string name="register">Register</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="login">Login</string>
    <string name="sudah_punya_akun">Sudah Punya Akun ?</string>
    <string name="belum_punya_akun">Belum Punya Akun ?</string>
    <string name="forgot_your_password">Forgot Your Password</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="reset_password">Reset Password</string>
</resources>
